[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/Spaceship.png" type="Texture" id=1]
[ext_resource path="res://scripts/Mass.gd" type="Script" id=2]
[ext_resource path="res://scripts/MassUpDownSFX.gd" type="Script" id=3]
[ext_resource path="res://scripts/MassThresholdSFX.gd" type="Script" id=4]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://sprites/final/GravityIndicator.png" type="Texture" id=6]
[ext_resource path="res://sprites/final/GravityIndicatorHandle.png" type="Texture" id=7]
[ext_resource path="res://materials/Explosion.tres" type="Material" id=8]
[ext_resource path="res://sprites/pfx/3ExplParticle.png" type="Texture" id=9]
[ext_resource path="res://sprites/Ice-Overlay.png" type="Texture" id=10]
[ext_resource path="res://sound/sfx/Explosion.mp3" type="AudioStream" id=11]
[ext_resource path="res://sound/sfx/Freeze.mp3" type="AudioStream" id=12]
[ext_resource path="res://sprites/final/LostScreen_FrozenUni.png" type="Texture" id=13]
[ext_resource path="res://sprites/final/LostScreen_BurnedUni.png" type="Texture" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.792793, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[node name="Raumschiff" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="Lineup" type="Node2D" parent="."]

[node name="Line1" type="Node2D" parent="Lineup"]
position = Vector2( 0.65, -136 )
rotation = 0.785398

[node name="ColorRect2" type="ColorRect" parent="Lineup/Line1"]
margin_left = -3.0
margin_top = -2.0
margin_right = 3.0
margin_bottom = 12.0
grow_vertical = 2

[node name="Line2" type="Node2D" parent="Lineup"]
position = Vector2( -0.65, -136 )
rotation = -0.785398

[node name="ColorRect2" type="ColorRect" parent="Lineup/Line2"]
margin_left = -3.0
margin_top = -2.0
margin_right = 3.0
margin_bottom = 12.0
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="GravityIndicator" type="Sprite" parent="Camera2D/CanvasLayer"]
position = Vector2( 963, 70 )
scale = Vector2( 1.01172, 1 )
texture = ExtResource( 6 )

[node name="GravityHandle" type="Sprite" parent="Camera2D/CanvasLayer"]
position = Vector2( 962.62, 70 )
texture = ExtResource( 7 )

[node name="Death1" type="Sprite" parent="Camera2D/CanvasLayer"]
visible = false
position = Vector2( 963, 540 )
texture = ExtResource( 14 )

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/Death1"]
margin_left = 459.0
margin_top = 319.0
margin_right = 581.0
margin_bottom = 441.0
shortcut_in_tooltip = false
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death2" type="Sprite" parent="Camera2D/CanvasLayer"]
visible = false
position = Vector2( 963, 540 )
texture = ExtResource( 13 )

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/Death2"]
margin_left = 459.0
margin_top = 319.0
margin_right = 581.0
margin_bottom = 441.0
shortcut_in_tooltip = false
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -27, 14, -17, 21, 25, 0, 17, -21, 25, -14, -17 )

[node name="BoostParticles" type="CPUParticles2D" parent="Collider"]
position = Vector2( 0, 13 )
emitting = false
amount = 50
lifetime = 0.75
one_shot = true
explosiveness = 0.75
lifetime_randomness = 0.5
direction = Vector2( 0, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
scale_amount = 2.0
color_ramp = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Collider"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Ice" type="Sprite" parent="Collider/Sprite"]
visible = false
position = Vector2( 0, -10 )
z_index = 30
texture = ExtResource( 10 )

[node name="MassUpDownSFX" type="AudioStreamPlayer2D" parent="."]
bus = "Spaceship"
script = ExtResource( 3 )

[node name="MassThresholdSFX" type="AudioStreamPlayer2D" parent="."]
bus = "Spaceship"
script = ExtResource( 4 )

[node name="CollectJingleSFX" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionSFX" type="AudioStreamPlayer2D" parent="."]

[node name="ExplosionPFX" type="Particles2D" parent="."]
position = Vector2( 0, -6 )
z_index = 50
emitting = false
amount = 500
lifetime = 1.3
one_shot = true
explosiveness = 1.0
randomness = 0.46
process_material = ExtResource( 8 )
texture = ExtResource( 9 )

[node name="ExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="FreezingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = -24.0
margin_right = 56.0
margin_bottom = -10.0
text = "MASS"

[connection signal="body_entered" from="." to="." method="_on_Raumschiff_body_entered"]
